//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax="proto2";
package sirius.proto;


enum OpType {
    OP_NONE                                 = 0;

    // for discovery
    OP_ADD_INSTANCE                         = 3;
    OP_DROP_INSTANCE                        = 6;
    OP_UPDATE_INSTANCE                      = 7;
    OP_CREATE_USER                          = 9;
    OP_ADD_PRIVILEGE                        = 10;
    OP_DROP_USER                            = 11;
    OP_DROP_PRIVILEGE                       = 12;
    OP_CREATE_NAMESPACE                     = 13;
    OP_DROP_NAMESPACE                       = 14;
    OP_MODIFY_NAMESPACE                     = 15;
    OP_GEN_ID_FOR_AUTO_INCREMENT            = 16;
    OP_UPDATE_FOR_AUTO_INCREMENT            = 17;
    OP_SET_INSTANCE_MIGRATE                 = 18;
    OP_ADD_ID_FOR_AUTO_INCREMENT            = 19;
    OP_DROP_ID_FOR_AUTO_INCREMENT           = 20;
    OP_SET_INSTANCE_STATUS                  = 21;
    OP_MODIFY_RESOURCE_TAG                  = 22;
    OP_GEN_TSO                              = 23;
    OP_RESET_TSO                            = 24;
    OP_UPDATE_TSO                           = 25;
    OP_QUERY_TSO_INFO                       = 26;
    OP_UPDATE_INSTANCE_PARAM                = 27;
    OP_UPDATE_MAIN_LOGICAL_ROOM             = 28;

    OP_CREATE_ZONE                          = 29;
    OP_DROP_ZONE                            = 30;
    OP_MODIFY_ZONE                          = 31;
    OP_CREATE_SERVLET                       = 32;
    OP_DROP_SERVLET                         = 33;
    OP_MODIFY_SERVLET                       = 34;
    OP_ADD_SERVLET_INSTANCE                 = 35;
    OP_RENEW_SERVLET_INSTANCE               = 36;
    OP_DROP_SERVLET_INSTANCE                = 37;

    // file op
    OP_CREATE_CONFIG                       = 38;
    OP_REMOVE_CONFIG                       = 39;
};

enum QueryOpType {
  QUERY_INSTANCE                                = 3;
  QUERY_USER_PRIVILEGE                          = 4;
  QUERY_NAMESPACE                               = 5;
  QUERY_INSTANCE_FLATTEN                        = 6;
  QUERY_PRIVILEGE_FLATTEN                       = 7;
  QUERY_INSTANCE_PARAM                          = 11;

  QUERY_ZONE                                    = 12;
  QUERY_SERVLET                                 = 13;
  QUERY_SERVLET_INSTANCE                        = 15;
  QUERY_SERVLET_INSTANCE_FETCH                  = 16;
  
  /// for ops
  QUERY_GET_CONFIG                       = 17;
  QUERY_LIST_CONFIG_VERSION              = 18;
  QUERY_LIST_CONFIG                      = 19;
};
